# cpp-opencv-edge-detection

./: CMakeLists.txt  README.md  main.cpp
